Add basic vite config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "puffer-smart-contracts-lib",
+  "name": "puffer-smart-contract-lib",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@types/node": "^20.12.11",
     "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
