--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "puffer-smart-contract-lib",
+  "name": "@pufferfinance/smart-contract-lib",
   "version": "0.0.0",
   "type": "module",
   "main": "./dist/main.cjs",
@@ -19,7 +19,8 @@
     "build": "vite build",
     "dev": "pnpm build --watch",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "release": "release-it"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
@@ -28,6 +29,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
+    "release-it": "^17.2.1",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0",
     "vite": "^5.2.11",
