Add publishConfig to package.json

--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "access": "restricted",
+    "registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "build": "vite build",
     "dev": "pnpm build --watch",
