--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@pufferfinance/smart-contract-lib",
   "version": "0.0.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PufferFinance/puffer-smart-contract-lib.git"
+  },
   "type": "module",
   "main": "./dist/main.cjs",
   "module": "./dist/main.js",
