--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,6 +29,15 @@ jobs:
           version: latest
           run_install: true
 
-      - run: pnpm release --increment prepatch
+      - name: Setup Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
+      - name: Build
+        run: pnpm build
+
+      - name: Publish Package
+        run: pnpm release --increment prepatch
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
