--- a/.release-it.json
+++ b/.release-it.json
@@ -6,5 +6,8 @@
     "release": true,
     "autoGenerate": true,
     "releaseName": "v${version}"
+  },
+  "hooks": {
+    "after:git:bump": "git add dist -f"
   }
 }
