--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@pufferfinance/smart-contract-lib",
+  "description": "Library for Puffer smart contract interactions",
   "version": "0.0.3-0",
   "repository": {
     "type": "git",
