--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "build": "vite build",
     "dev": "pnpm build --watch",
     "lint": "eslint .",
+    "test": "echo 'No tests'",
     "format": "prettier --write .",
     "release": "release-it"
   },
