--- a/package.json
+++ b/package.json
@@ -32,9 +32,17 @@
     "format": "prettier --write .",
     "release": "release-it"
   },
+  "peerDependencies": {
+    "react": ">= 16",
+    "web3": ">= 4",
+    "ethers": ">= 6",
+    "@chainsafe/bls": ">= 7",
+    "@chainsafe/ssz": ">= 0.12.0"
+  },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
     "@types/node": "^20.12.11",
+    "@types/react": "^18.3.2",
     "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -44,5 +52,8 @@
     "typescript-eslint": "^7.8.0",
     "vite": "^5.2.11",
     "vite-plugin-dts": "^3.9.1"
+  },
+  "dependencies": {
+    "abitype": "^1.0.2"
   }
 }
