--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "format": "prettier --write .",
     "release": "release-it"
   },
+  "dependencies": {
+    "@chainsafe/bls": "^8.1.0",
+    "@chainsafe/ssz": "^0.16.0",
+    "ethers": "^6.12.1",
+    "web3": "^4.8.0"
+  },
   "peerDependencies": {
-    "@chainsafe/bls": ">= 7",
-    "@chainsafe/ssz": ">= 0.12.0",
-    "ethers": ">= 6",
-    "react": ">= 16",
-    "web3": ">= 4"
+    "react": ">= 16"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
