--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@chainsafe/bls": "^8.1.0",
     "@chainsafe/ssz": "^0.16.0",
     "ethers": "^6.12.1",
+    "viem": "^2.10.8",
     "web3": "^4.8.0"
   },
   "peerDependencies": {
