--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "dev": "pnpm build --watch",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "echo 'No tests'",
+    "test": "jest",
     "format": "prettier --write .",
     "release": "release-it"
   },
@@ -45,13 +45,18 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.11",
     "@types/react": "^18.3.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.2.5",
     "release-it": "^17.2.1",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0",
     "vite": "^5.2.11",
