--- a/package.json
+++ b/package.json
@@ -34,20 +34,12 @@
     "release": "release-it"
   },
   "dependencies": {
-    "@chainsafe/bls": "^8.1.0",
-    "@chainsafe/ssz": "^0.16.0",
-    "ethers": "^6.12.1",
-    "viem": "^2.10.8",
-    "web3": "^4.8.0"
-  },
-  "peerDependencies": {
-    "react": ">= 16"
+    "viem": "^2.10.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.11",
-    "@types/react": "^18.3.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
