Add test:watch, noImplicitAny option and use common types

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "jest",
+    "test:watch": "jest --watch",
     "format": "prettier --write .",
     "release": "release-it"
   },
