--- a/docs/package.json
+++ b/docs/package.json
@@ -29,6 +29,9 @@
     "@docusaurus/tsconfig": "3.3.2",
     "@docusaurus/types": "3.3.2",
     "@types/react": "^18.3.2",
+    "docusaurus-plugin-typedoc": "^1.0.1",
+    "typedoc": "^0.25.13",
+    "typedoc-plugin-markdown": "^4.0.2",
     "typescript": "~5.2.2"
   },
   "browserslist": {
