--- a/.release-it.json
+++ b/.release-it.json
@@ -1,10 +1,14 @@
 {
   "git": {
-    "commitMessage": "[Github Actions] Release v${version}"
+    "commitMessage": "[Github Actions] Release v${version}",
+    "requireCleanWorkingDir": false
   },
   "github": {
     "release": true,
     "autoGenerate": true,
     "releaseName": "v${version}"
+  },
+  "hooks": {
+    "after:npm:bump": "git add -A"
   }
 }
