--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,9 +1,8 @@
-name: Deploy Docs
+name: deploy-docs
 
 on:
   release:
     types: [published]
-  push:
   workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
