--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pufferfinance/puffer-sdk",
   "description": "SDK for interacting with the puffer smart contracts",
-  "version": "1.0.0",
+  "version": "1.0.1-0",
   "repository": {
     "type": "git",
     "url": "https://github.com/PufferFinance/puffer-sdk.git"
