--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,6 +60,11 @@ jobs:
       - name: Build docs
         run: pnpm docs:build
 
+      - name: Upload docs for deployment
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: docs/build
+
       - name: Publish package
         if: "${{ inputs.prerelease == 'no' }}"
         run: pnpm release --increment ${{ inputs.increment }}
@@ -73,3 +78,22 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  deploy-docs:
+    runs-on: ubuntu-latest
+    needs: publish-package
+
+    # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+    permissions:
+      pages: write
+      id-token: write
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
