Update docs README and deployment action

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,12 +1,12 @@
+# Use this action when needed to manually deploying the docs. Deployment
+# of docs is a part of the publish.yml workflow because the release
+# trigger doesn't work for automated releases. See
+# https://github.com/orgs/community/discussions/25281.
+
 name: deploy-docs
 
 on:
   workflow_dispatch:
-
-  # Deployment of docs is a part of the publish.yml workflow because the
-  # release trigger doesn't work for automated releases. See
-  # https://github.com/orgs/community/discussions/25281.
-  # ---
   # release:
   #   types: [published, released]
 
