--- a/docs/package.json
+++ b/docs/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@docusaurus/core": "3.5.2",
     "@docusaurus/preset-classic": "3.5.2",
-    "@easyops-cn/docusaurus-search-local": "^0.41.0",
+    "@easyops-cn/docusaurus-search-local": "^0.44.5",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
@@ -31,8 +31,8 @@
     "@types/react": "^18.3.2",
     "docusaurus-plugin-typedoc": "^1.0.1",
     "typedoc": "^0.25.13",
-    "typedoc-plugin-markdown": "^4.0.2",
-    "typescript": "5.2.2"
+    "typedoc-plugin-markdown": "~4.0.2",
+    "typescript": "5.4.2"
   },
   "browserslist": {
     "production": [
