--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
       "types": "./dist/main.d.ts",
       "import": "./dist/main.js",
       "require": "./dist/main.cjs"
+    },
+    "./handlers/*": {
+      "types": "./dist/contracts/handlers/*.d.ts",
+      "import": "./dist/contracts/handlers/*.js",
+      "require": "./dist/contracts/handlers/*.cjs"
     }
   },
   "files": [
@@ -38,7 +43,7 @@
     "docs:deploy": "pnpm --filter docs run deploy"
   },
   "dependencies": {
-    "viem": "^2.19.4"
+    "viem": "~2.18.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -48,6 +53,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eth-testing": "^1.14.0",
+    "glob": "^11.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.3",
