--- a/package.json
+++ b/package.json
@@ -48,26 +48,26 @@
     "docs:deploy": "pnpm --filter docs run deploy"
   },
   "dependencies": {
-    "viem": "~2.21.55"
+    "viem": "^2.23.6"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
+    "@eslint/js": "^9.21.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.2",
-    "eslint": "^9.17.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "@types/node": "^22.13.9",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-prettier": "^5.2.3",
     "eth-testing": "^1.14.0",
-    "glob": "^11.0.0",
+    "glob": "^11.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.4.2",
-    "release-it": "^17.10.0",
-    "ts-jest": "^29.2.5",
+    "prettier": "^3.5.3",
+    "release-it": "^18.1.2",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.1",
-    "vite": "^6.0.4",
-    "vite-plugin-dts": "^4.4.0"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.0",
+    "vite": "^6.2.0",
+    "vite-plugin-dts": "^4.5.3"
   }
 }
